improve the pointer